--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
 	<button id="open">Open</button>
 	<input type="file" id="file">
 	
-	<label>
-		Frame rate:
-		<input id="fps" type="number" step="0.01" value="24">
-	</label>
+	<label for="fps">Frame rate:</label>
+	<input id="fps" type="number" step="0.001" value="24">
+	
+	<select id="framerates">
+		<option>6</option>
+		<option>8</option>
+		<option>12</option>
+		<option>23</option>
+		<option>23.98</option>
+		<option>23.976</option>
+		<option>24</option>
+		<option>25</option>
+		<option>29.97</option>
+		<option>30</option>
+		<option>48</option>
+		<option>50</option>
+		<option>59.94</option>
+		<option>60</option>
+		<option>120</option>
+	</select>
 	
 	<progress max="1" value="0"></progress>
 	<button id="go">Go!</button>
